<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailActivity">

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        ads:adSize="LARGE_BANNER"
        ads:adUnitId="@string/admob_banner_ad_id"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.app.bmicalculator.custom.CenteredToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_gradient_toolbar"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_chevron_left_white"
        app:title="@string/title_bmi_detail" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:fillViewport="true"
        ads:layout_constraintBottom_toTopOf="@+id/adView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clBmi"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/bg_gradient_detail_layout">


            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                ads:layout_constraintTop_toTopOf="parent">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/half_opacity_white" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/raleway_semibold"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp"
                    android:text="@string/body_mass_index"
                    android:textAlignment="center"
                    android:textColor="@color/half_opacity_white"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/half_opacity_white" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="18dp"
                android:orientation="vertical"
                ads:layout_constraintBottom_toTopOf="@+id/llRate"
                ads:layout_constraintTop_toBottomOf="@+id/linearLayout4"
                ads:layout_constraintVertical_bias="0.0"
                tools:layout_editor_absoluteX="16dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvBmi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:includeFontPadding="false"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:textColor="@android:color/white"
                        android:textSize="52sp"
                        tools:text="18.61" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/white" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/tvResult"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:fontFamily="@font/allerta"
                        android:maxLines="3"
                        android:paddingStart="12sp"
                        android:paddingEnd="12sp"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="@android:color/white"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        tools:text="Hello wilson, you are normal" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:fontFamily="@font/poppins"
                        android:text="@string/bmi_range_default_text"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        android:textSize="10sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:background="@drawable/bg_outline_white_ripple"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal"
                ads:layout_constraintBottom_toBottomOf="parent"
                ads:layout_constraintEnd_toEndOf="parent"
                ads:layout_constraintHorizontal_bias="0.5"
                ads:layout_constraintStart_toEndOf="@+id/llShare">


                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:gravity="center_vertical"
                    android:src="@drawable/ic_star" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_vertical"
                    android:text="@string/rate"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:background="@drawable/bg_outline_white_ripple"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal"
                ads:layout_constraintBottom_toBottomOf="parent"
                ads:layout_constraintEnd_toStartOf="@+id/llRate"
                ads:layout_constraintHorizontal_bias="0.5"
                ads:layout_constraintHorizontal_chainStyle="spread"
                ads:layout_constraintStart_toStartOf="parent">


                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:gravity="center_vertical"
                    android:src="@drawable/ic_share" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_vertical"
                    android:text="@string/share"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>